[package]
name = "ethereum-handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
aes = { version = "0.8.4" }
bytes = { version = "1.7.2" }
clap = { version = "4.5.18", features = ["derive"] }
ctr = { version = "0.9.2" }
concat-kdf = { version = "0.1.0" }
ethereum-types = { version = "0.15.1" }
hex = { version = "0.4.3" }
hmac = { version = "0.12.1" }
rlp = { version = "0.6.1" }
secp256k1 = { version = "0.29.1", features = ["global-context", "rand-std", "recovery"] }
sha2 = { version = "0.10.8" }
sha3 = { version = "0.10.8" }
thiserror = { version = "1.0.64" }
tokio = { version = "1.40.0", features = ["io-util", "macros", "net", "rt-multi-thread", "time"] }
tracing = { version = "0.1.40"}
tracing-subscriber = {  version = "0.3.18" , features = ["env-filter"]}
